test_src/compiler_errors/types/boolean/ForNumberError.b
class ForNumberError {
    void test() {
        for (var i = 5; i; i--)
            println(i);
    }
}
